--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/regular" routerLinkActive="active">View Events</a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
       </li>
