--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,17 @@
     <h3>Login Form</h3>
     <form>
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        <label for="email">Email address</label>
+        <input type="email" name="email" [(ngModel)]="userDetails.email" class="form-control" id="email" placeholder="Enter email">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="password">Password</label>
+        <input type="password" name="password" [(ngModel)]="userDetails.password" class="form-control" id="password" placeholder="Password">
       </div>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <div class="alert alert-danger" role="alert" *ngIf="loginError">
+        {{loginError}}
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="loginUser()">Login</button>
     </form>
   </div>
 </div>
