--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,8 +3,8 @@
     <h3>Register Form</h3>
     <form>
       <div class="form-group">
-        <label for="name">Email address</label>
-        <input type="text" name="name" [(ngModel)]="userDetail.name" class="form-control" id="name" placeholder="Enter email">
+        <label for="name">Name</label>
+        <input type="text" name="name" [(ngModel)]="userDetail.name" class="form-control" id="name" placeholder="Enter your name">
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
