--- a/src/app/special-events/special-events.component.html
+++ b/src/app/special-events/special-events.component.html
@@ -1,1 +1,16 @@
-<p>special-events works!</p>
+<div class="row">
+  <div class="col-md-3 mt-3" *ngFor="let event of specialEvents">
+    <div class="card">
+      <div class="card-header text-white">
+        Special Event
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">{{event.name}}</h5>
+        <p class="card-text">{{event.description}}</p>
+        <p class="card-text"><b>{{event.date}}</b></p>
+        <a class="btn text-white">Register</a>
+      </div>
+    </div>
+  </div>
+</div>
+
